fix db schema
