# docs/swagger.json
@@ -243,15 +243,10 @@
         "dto.CreateOrderRequest": {
             "type": "object",
             "required": [
-                "customer_email",
                 "customer_name",
                 "items"
             ],
             "properties": {
-                "customer_email": {
-                    "type": "string",
-                    "example": "john.doe@example.com"
-                },
                 "customer_name": {
                     "type": "string",
                     "example": "John Doe"
@@ -323,10 +318,6 @@
                 "created_at": {
                     "type": "string",
                     "example": "2023-06-15T10:30:00Z"
-                },
-                "customer_email": {
-                    "type": "string",
-                    "example": "john.doe@example.com"
                 },
                 "customer_name": {
                     "type": "string",
